multiple alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
     margin-top: -50%;   
   }
   .footer_font{    
-    font-size: 14px;  
+    font-size: 15px;  
   }
 }
 
@@ -35,49 +35,49 @@
     margin-top: -50%;   
   }
   .footer_font{    
-    font-size: 11px;  
+    font-size: 13px;  
   }
 }
 
 @media screen and (max-width: 991px) and (min-width: 768px) {
   .head11 {
-    margin-top: -7vw;
+    margin-top: -130px;
   }
   .con_1 {
     margin-top: -50%;   
   }
   .footer_font{    
-    font-size: 15px;  
+    font-size: 16px;  
   }
 }
 
 @media screen and (max-width: 767px) and (min-width: 577px) {
   .head11 {
-    margin-top: -65px;
+    margin-top: -100px;
   }
   .con_1 {
-    margin-top: -55%;   
+    margin-top: -50%;   
   }
   .footer_font{    
-    font-size: 15px;  
+    font-size: 16px;  
   }
 }
 
 @media screen and (max-width: 576px) and (min-width: 430px) {
   .head11 {
-    margin-top: -20px;
+    margin-top: -70px;
   }
   .con_1 {
-    margin-top: -57%;   
+    margin-top: -52%;   
   }
 }
 
-@media screen and (max-width: 429px) {
+@media screen and (max-width: 429px)  and (min-width: 0px) {
   .head11 {
-    margin-top: -10px;
+    margin-top: -35px;
   }
   .con_1 {
-    margin-top: -58%;   
+    margin-top: -53%;   
   }
 }
 
@@ -104,13 +104,13 @@ width: 100%;
 
 .mid > p {
   font-size: 25px;
-  color: green;
+  color: #006400;
   font-weight: bold;
   text-align: right;
 }
 .right>span{
   font-size: 2vw;
-  color: green;
+  color: #006400;
   font-weight: bold;
   text-align: right;
 
@@ -118,26 +118,44 @@ width: 100%;
 
 
 /*  end row 2 nav2 */
+/* .items {
+
+   padding-left: 70px;
+  padding-right: 70px; 
+} */
 
 .items > h3 {
-  font-size: 16pt;
+  font-size: 30pt;
   font-weight: bold;
-  text-align: center;
+  text-align: left;
   margin-top: 40px;
   color: white;
-  align-items: center;
+  /* align-items: center; */
+  padding-left: 15px;
+  padding-right: 25px; 
 }
 .items > p {
-  font-size: 14pt;
+  font-size: 16pt;
   font-weight: 200;
-  text-align: center;
+  text-align:left;
   margin-top: 5px;
   color: white;
-  align-items: center;
+  /* align-items: center; */
+
+  padding-left: 15px;
+  padding-right: 25px; 
 }
 
+
+
 .items > h6 {
-  font-weight: 900 !important;
+  /* font-weight: 700 !important; */
+  font-size: 16pt;
+  color:#f15d2a; 
+  text-align:left;
+  padding-left: 15px;
+  padding-right: 25px; 
+
 }
 
 
@@ -171,6 +189,9 @@ width: 100%;
 
 .bg-clr{
   background-color:#f15d2a; 
+  color: white;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 .bg-clr>span{
   display: flex;
@@ -179,6 +200,6 @@ width: 100%;
 }
 
 .icon_img{
-  width: 20px;
+  width: 35px;
   
 }
